<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/repoOwnerImg"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/repoFullName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/repo_fullname"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/repoName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/repo_name"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/repoLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/repo_login" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/repoDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/repo_description"

            />

        <TextView
            android:id="@+id/repoLanguage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/repo_language" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/repoCreated"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/repo_created"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/repoUpdated"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/repo_updated"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/repoPushed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/repo_pushed"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/repoWatchers"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/repo_watchers" />


        <TextView
            android:id="@+id/repoForks"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/repo_forks"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/repoShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repo_share" />

        <Button
            android:id="@+id/repoWatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repo_watch" />

    </LinearLayout>

</LinearLayout>