<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/gistCreateFilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/gist_filename" />

    <EditText
        android:id="@+id/gistCreateDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gistCreateFilename"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/gist_description" />

    <EditText
        android:id="@+id/gistCreateContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/gistCreateDescription"
        android:layout_below="@+id/gistCreateDescription"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/gist_content" />

    <CheckBox
        android:id="@+id/gistCreateIsPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gistCreateContent"
        android:layout_marginStart="14dp"
        android:layout_marginTop="41dp"
        android:text="@string/gist_ispublic" />

    <Button
        android:id="@+id/gistCreateSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/gistCreateIsPublic"
        android:layout_below="@+id/gistCreateIsPublic"
        android:layout_marginTop="33dp"
        android:text="@string/gist_submit" />
</RelativeLayout>